deploy/CL-AUT-QA/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: manager
  name: "service-jobBaseName"
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app: "jobBaseName"
