deploy/CL-AUT-QA/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "jobBaseName-ingress"
  namespace: manager
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: cl-aut-qa-external-lb
    alb.ingress.kubernetes.io/load-balancer-name: "cl-aut-qa-external-lb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:120144148414:certificate/598ba41e-3180-40fa-b4ba-b7cb8d1dd86f
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: jobBaseName-ingress
spec:
  rules:
    - host: manager-api-qa.i-med.cl
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            pathType: ImplementationSpecific
          - backend:
              service:
                name: "service-jobBaseName"
                port:
                  number: 80
            pathType: ImplementationSpecific
